--- a/Virtual Lab/Pin fin/procedure.html
+++ b/Virtual Lab/Pin fin/procedure.html
@@ -245,36 +245,36 @@ ul li a:hover .name span{
                      Air mean temperature Tf =(Ts+T6)/2 =  ℃ <br>
                      The properties of air µ, Cp, Kair, and Pr are taken from steam tables at Tf <br>
                 2. Determine (Gr×Pr)<br>
-		 Gr = Grashof Number = g*β*ΔT*(L^3)/(V^2) <br> <br>
+		 Gr = Grashof Number = g*β*ΔT*(L^3)/(V^2) <br> 
                  Pr = Prandtl number = (μ*Cp)/Kair <br>
 		3. The empirical relations of air for free convection are <br>
- 	          a. Nu = 1.1*(Gr.Pr)^1.7 for 0.1<Gr.Pr<10^4 <br>
- 	          b. Nu = 0.59*(Gr.Pr)^0.25 for 10^4<Gr.Pr<10^9 <br>
- 		  c. Nu = 0.13*(Gr.Pr)^(1/3) for 10^9<Gr.Pr<10^12 <br>
+ 	          a. Nu = 1.1*(Gr.Pr)^1.7 for 0.1 (<) Gr.pr (<) 10^4 <br>
+ 	          b. Nu = 0.59*(Gr.Pr)^0.25 for 10^4(<)Gr.Pr (<) 10^9 <br>
+ 		  c. Nu = 0.13*(Gr.Pr)^(1/3) for 10^9 (<)Gr.Pr (<) 10^12 <br>
 		4. Determine heat transfer coefficient <br>
 		  Nu = Nusset number =(h*Lc)/Kair   Where Lc = d <br>
  		5. The heat transfer from a fin <br>
 		 Q= ((hpKA)^0.5)*(Ts-T∞)*tanhmL   Watt <br>
 		6. Determine fin efficiency  <br>
-		 ηfin= (tanhmL)/(mL)  where m= (hP/KA)^0.5    where P=πd , A = (π*d*d)/4 <br>
+		 ηfin= (tanhmL)/(mL),  where m= (hP/KA)^0.5 ,   where P=πd , A = (π*d*d)/4 <br>
                (B) Calculation of h in forced convection: <br>
 		 1. The discharge of air through orifice  <br>
  	 	    (Qa ) = Cd*A*((2gha)^0.5) <br>
                     Where, Cd = Coefficient of discharge of the orifice (0.64) <br>
                            A = Area of cross-section of orifice = (π*d*d)/4 <br>
                            d = Diameter of the orifice in meters, hw = h1- h2 /100 m of water <br>
-                           ha = ρwhw/ρa where ρw = density of water = 1000 kg/m^3, ρa = density of air = 1.2 kg/m^3 <br>				 
+                           ha = ρwhw/ρa     ,where ρw = density of water = 1000 kg/m^3, ρa = density of air = 1.2 kg/m^3 <br>				 
 		    The velocity of air across the fins <br>
 			  u=(Qa/duct area)*((Tf+273)/(Ta+273)) (use this velocity in calculation of Renolds number) <br>
 		 2. Determine the heat transfer coefficient using the below relations <br>
- 			(a) Nu = 0.683*(Re)^0.466 when 40<Re<4000 <br>
- 			 b) Nu= 0.174*(Re)^0.618 when 4000<Re<40000 <br>
+ 			(a) Nu = 0.683*(Re)^0.466 when 40(<)Re (<) 4000 <br>
+ 			 b) Nu= 0.174*(Re)^0.618 when 4000 (<) Re (<) 40000 <br>
 				Where Nu =(h*d)/Kair ,  Re = ρ*u*d/μ (v=µ/ρ) <br>
 		The properties of air µ, Cp, Kair, , ρ, and Pr are taken from steam tables at mean air temperature (Tf) <br>
 		 (3) The heat transfer from a fin <br>
  			 Q= ((hpKA)^0.5)*(Ts-T∞)*tanhmL   Watt <br>
 		(4) Determine fin efficiency <br> 
-			ηfin= (tanhmL)/(mL)  where m= (hP/KA)^0.5    where P=πd , A = (π*d*d)/4 <br>
+			ηfin= (tanhmL)/(mL)            ,   where m= (hP/KA)^0.5 ,       where P=πd ,      A = (π*d*d)/4 <br>
             <p><strong>RESULT:</strong><br>
             The efficiency of pin fin in natural convection =  <br>
 	    The efficiency of pin fin in forced convection = </p>
