--- a/Virtual Lab/Natural convection/Calculator.html
+++ b/Virtual Lab/Natural convection/Calculator.html
@@ -239,7 +239,7 @@ ul li a:hover .name span{
             if(!isNaN(t1) && !isNaN(t2) && !isNaN(t3) && !isNaN(t4) && !isNaN(t5) && !isNaN(t6) && !isNaN(t7) && !isNaN(t8)){
                 
                 var ts=(t1+t2+t3+t4+t5+t6+t7)/7;
-                ts=ts.toFixed(2)+273;
+                ts=ts.toFixed(2)+273+273;
                 var ta=t8+273;
                 var As=3.14*d*l;
                 As=As.toFixed(2);
