--- a/Virtual Lab/Natural convection/simulator.html
+++ b/Virtual Lab/Natural convection/simulator.html
@@ -204,7 +204,7 @@ ul li a:hover .name span{
             </div>
             <script>
                 let temps=[[28,28,28,28,28,28,28,28],[50,68,89,104,95,113,103,31],[65,96,130,151,134,160,138,34],[80,121,163,186,165,194,165,36]]
-                let vi=[[0,0],[47,0.22],[66,0.31],[81,0.38],[114,0.53]
+                let vi=[[0,0],[47,0.22],[66,0.31],[81,0.38],[114,0.53]]
                 let power_status=false;
                 var x=0;
                 var y=0;
