--- a/Virtual Lab/Conduction in a metal rod/Calculator.html
+++ b/Virtual Lab/Conduction in a metal rod/Calculator.html
@@ -178,10 +178,96 @@ ul li a:hover .name span{
             </li>
         </ul>
         </div>
+	<div class="cal">
+            <h2>Observation table:</h2>
+<table>
+    <tr>
+        <th colspan="3">Heat Input</th>
+        <th colspan="9">Thermocouple readings<sup>0</sup>C</th>
+	<th colspan="2">Water Temperature</th>
+	<th colspan="1">flow rate</th>
+    </tr>
+    <tr>
+        <th>V(volt)</th>
+        <th>I(amp)</th>
+        <th>V*I(watts)</th>
+        <th>T<sub>1</sub></th>
+        <th>T<sub>2</sub></th>
+        <th>T<sub>3</sub></th>
+        <th>T<sub>4</sub></th>
+        <th>T<sub>5</sub></th>
+        <th>T<sub>6</sub></th>
+        <th>T<sub>7</sub></th>
+        <th>T<sub>8</sub></th>
+	<th>T<sub>9</sub></th>
+	<th>T<sub>10</sub></th>
+	<th>T<sub>11</sub></th>
+	<th>Vol</th>
+    </tr>
+    <tr>
+        <td><input type="number" id="V" style="width:100px"></td>
+        <td><input type="number" id="I" style="width:100px"></td>
+        <td id="power"></td>
+        <td><input type="number" id="t1" style="width:65px"></td>
+        <td><input type="number" id="t2" style="width:65px"></td>
+        <td><input type="number" id="t3" style="width:65px"></td>
+        <td><input type="number" id="t4" style="width:65px"></td>
+        <td><input type="number" id="t5" style="width:65px"></td>
+        <td><input type="number" id="t6" style="width:65px"></td>
+        <td><input type="number" id="t7" style="width:65px"></td>
+        <td><input type="number" id="t8" style="width:65px"></td>
+	<td><input type="number" id="t9" style="width:65px"></td>
+	<td><input type="number" id="t10" style="width:65px"></td>
+	<td><input type="number" id="t11" style="width:65px"></td>
+	<td><input type="number" id="Vol" style="width:65px"></td>
+    </tr>
+</table>
+<button onclick="calculate()">Calculate</button>
+<p id="result"></p>
+</div>
+<script>
+    function calculate(){
+        var V=document.getElementById('V').value;
+        var I=document.getElementById('I').value;
+        if(!isNaN(V) && !isNaN(I)){
+            var Q=V*I;
+            Q=Q.toFixed(2);
+            document.getElementById('power').innerHTML=Q;
+            var t1=parseInt(document.getElementById('t1').value);
+            var t2=parseInt(document.getElementById('t2').value);
+            var t3=parseInt(document.getElementById('t3').value);
+            var t4=parseInt(document.getElementById('t4').value);
+            var t5=parseInt(document.getElementById('t5').value);
+            var t6=parseInt(document.getElementById('t6').value);
+            var t7=parseInt(document.getElementById('t7').value);
+            var t8=parseInt(document.getElementById('t8').value);
+	        var t9=parseInt(document.getElementById('t9').value);
+	        var t10=parseInt(document.getElementById('t10').value);
+	        var t11=parseInt(document.getElementById('t11').value);
+	        var Vol=parseInt(document.getElementById('Vol').value);
+            var d=0.002;
+	        var cp=4.18;
+            //document.getElementById('result').innerHTML=Math.pow(3,4);
+            //document.getElementById('result').innerHTML=(t1+t2+t3)/3;
+            if(!isNaN(t1) && !isNaN(t2) && !isNaN(t3) && !isNaN(t4) && !isNaN(t5) && !isNaN(t6) && !isNaN(t7) && !isNaN(t8) && !isNaN(t9) && !isNaN(10) && !isNaN(t11)){
+                var A=(3.14*d*d)/4;
+             //   A=A.toFixed(2);
+		        var mw= 0.0038;
+                var K=((mw*cp*(t11-t10))/(A*0.19))/100;
+                K=K.toFixed(2);
+                var res=`<h1>Calculation:</h1>`;
+                res+=`<p>Area of cross section, A=${A}m<sup>2</sup></p>`;
+                res+=`<p>Thermal conductivity=K=${K}W/mK</p>`;
+                document.getElementById('result').innerHTML=res;
+
+            }
+        }
+    }
+</script>
 <style>
     .menu{
         position:relative;
-        top:30px;
+        top: 30px;;
     }
 .col1{
     position:relative;
