--- a/Virtual Lab/Composite wall/Calculator.html
+++ b/Virtual Lab/Composite wall/Calculator.html
@@ -246,24 +246,33 @@ ul li a:hover .name span{
                 var Td=(t7+t8)/2;
                var  A=(3.14*d*d)/4;
                 var q=Q/(2*A);
-                var R<sub>total</sub>=(Ta-Td)/q;
-		var R<sub>mild</sub>=(Ta-Tb)/q;
-		var R<sub>bak</sub>=(Tb-Tc)/q;
-		var R<sub>wood</sub>=(Tc-Td)/q;
-		var K<sub>com</sub>=(q*b)/(Ta-Td);
-		var K<sub>mild</sub>=(q*b1)/(Ta-Tb);
-		var K<sub>bak</sub>=(q*b2)/(Tb-Tc);
-		var K<sub>wood</sub>=(q*b3)/(Tc-Td);
+                q=q.toFixed(2);
+                var Rtotal=(Ta-Td)/q;
+                Rtotal=Rtotal.toFixed(4);
+		var Rmild=(Ta-Tb)/q;
+        Rmild=Rmild.toFixed(4);
+		var Rbak=(Tb-Tc)/q;
+        Rbak=Rbak.toFixed(4);
+		var Rwood=(Tc-Td)/q;
+        Rwood=Rwood.toFixed(4);
+		var Kcom=(q*b)/(Ta-Td);
+        Kcom=Kcom.toFixed(4);
+		var Kmild=(q*b1)/(Ta-Tb);
+        Kmild=Kmild.toFixed(4);
+		var Kbak=(q*b2)/(Tb-Tc);
+        Kbak=Kbak.toFixed(4);
+		var Kwood=(q*b3)/(Tc-Td);
+        Kwood=Kwood.toFixed(4);
                 var res=`<h1>Calculation:</h1>`;
                 res+=`<p>Heat Flux = q= ${q}W/m<sup>2</sup></p>`;
-		res+=`<p>Thermal resistance of composite wall=R<sub>total</sub> = ${R<sub>total</sub>}m<sup>2</sup>K/W</p>`;
-		res+=`<p>Thermal resistance of Mild steel=R<sub>mild</sub> = ${R<sub>mild</sub>}m<sup>2</sup>K/W</p>`;
-		res+=`<p>Thermal resistance of Bakelite=R<sub>bak</sub> = ${R<sub>bak</sub>}m<sup>2</sup>K/W</p>`;
-		res+=`<p>Thermal resistance of Wood=R<sub>wood</sub> = ${R<sub>wood</sub>}m<sup>2</sup>K/W</p>`;
-		res+=`<p>Thermal conductivity of composite wall=K<sub>com</sub> = ${K<sub>com</sub>}W/mK</p>`;
-		res+=`<p>Thermal conductivity of Mild steel=K<sub>mild</sub> = ${K<sub>mild</sub>}W/mK</p>`;
-                res+=`<p>Thermal conductivity of Bakelite=K<sub>bak</sub> = ${K<sub>bak</sub>}W/mK</p>`;
-		res+=`<p>Thermal conductivity of Wood=K<sub>wood</sub> = ${K<sub>wood</sub>}W/mK</p>`;
+		res+=`<p>Thermal resistance of composite wall=Rtotal = ${Rtotal}m<sup>2</sup>K/W</p>`;
+		res+=`<p>Thermal resistance of Mild steel=Rmild = ${Rmild}m<sup>2</sup>K/W</p>`;
+		res+=`<p>Thermal resistance of Bakelite=Rbak= ${Rbak}m<sup>2</sup>K/W</p>`;
+		res+=`<p>Thermal resistance of Wood=Rwood= ${Rwood}m<sup>2</sup>K/W</p>`;
+		res+=`<p>Thermal conductivity of composite wall=Kcom = ${Kcom}W/mK</p>`;
+		res+=`<p>Thermal conductivity of Mild steel=Kmild = ${Kmild}W/mK</p>`;
+        res+=`<p>Thermal conductivity of Bakelite=Kbak = ${Kbak}W/mK</p>`;
+		res+=`<p>Thermal conductivity of Wood=Kwood= ${Kwood}W/mK</p>`;
                 document.getElementById('result').innerHTML=res;
             }
         }
