--- a/Virtual Lab/Stefan boltzman appartus/procedure.html
+++ b/Virtual Lab/Stefan boltzman appartus/procedure.html
@@ -132,7 +132,7 @@ ul li a:hover .name span{
                 </a>
             </li>
             <li>
-                <a href="C:\Users\hp\Desktop\Virtual Lab\Lagged cylinder\procedure.html">
+                <a href="C:\Users\hp\Desktop\Virtual Lab\Stefan boltzman appartus\procedure.html">
                     <!-- this anchor text for link your About page to another page -->
                     <div class="icon">
                         <i class="fa fa-file" aria-hidden="true"></i><!-- this is file icon link get form fornt-awesome icon for about -->	
@@ -210,27 +210,39 @@ ul li a:hover .name span{
 
     <div class="procedure">
         <div class="hea">
-            <h2>Test Procedure for Determining Thermal Conductivity of given Insulating Powder</h2>
+            <h2>Test Procedure for Determining the Stefan Boltzmann Constant of Radiation Heat Transfer</h2>
         </div>
         <div class="main">
-            <p><strong>AIM:</strong>To plot the radial temperature distribution in the composite cylinder and to determine the thermal conductivity of the pipe insulation.</p>
+            <p><strong>AIM:</strong>To determine Stefan- Boltzman constant of radiation heat transfer.</p>
             <p><strong>APPARATUS:</strong><br>
-            The apparatus consists of a metal pipe with two layers of insulation. An electric heating coil wound on a silica rod is placed at the center. The ends are thickly insulated to prevent heat loss so that heat flows only in a radial direction. Three thermocouples each are placed at different radii to measure the temperature distribution within the cylinder.</p>
-            <p><strong>TECHNICAL DATA:</strong><br>
-            Location of thermocouples 1, 2, 3 at a radius r₁ = 25mm<br>
-            Location of thermocouples 4, 5, 6 at a radius rm = 50mm<br>
-            Location of thermocouples 7, 8, 9 on glass wool<br>
-            Location of thermocouples 10, 11,12 at a radius ro = 75mm<br>
-            Length of the pipe                                 = 500 mm<br></p>
+            Stefan- Boltzman Apparatus.<br></p>
+	    <p><strong>THEORY:</strong></p>
+		Stefan Boltzmann law is a basic law of radiation heat transfer and it states that at thermal equilibrium, the heat flux or emissive power of a black surface is proportional to the fourth power of absolute temperature of the surface and is given by:
+              Q / A= εb σ T^4  (W/m^2) <br>
+           The constant of proportionality σ is called the Stefan Boltzmann constant and its standard value is <br>
+		5.667 x 10^(-8)        W/(m^2 K^4). <br>
+           The Stefan Boltzman law can be derived by integrating the Planck's law over the entire spectrum of wave lengths. Though historically it is worth noting that the Stefan Boltzmann law was independently developed before Planck's law. <br>
+            <p><strong>SPECIFICATIONS:</strong><br>
+            1. Hemispherical enclosure dia = 200 mm <br>
+	    2. Test disc dia = 19.90 mm <br>
+	    3. Mass of test disc = 5 gms <br>
+	    4. Specific heat C of Copper = 381 J/kg 0C <br>
             <p><strong>PROCEDURE:</strong><br>
-            1. Connect the equipment to a 230 V, 5 amps, 50 Hz electrical source <br>
-            2. Turn the dimmerstat knob clockwise and fix the heat input to a desired wattage.<br>
-            3. Allow the equipment to stabilize and attain steady state<br>
-            4. Turn the thermocouple selector switch knob clockwise and note down temperaturesT1 to T12<br>
-            5. Repeat the experiment for different heat inputs.<br>
-            <p><strong>SPECIMEN CALCULATIONS:</strong></p>
-            <p><strong>Result</strong><br>
-            Thermal conductivity of given insulating powder=  W/mK</p>
+            1. Check the level of water in the tank and fill it till it overflows. <br>
+	    2. Set the thermostat to desired temperature for water heating. <br>
+	    3. The water is heated in the tank by the immersion heater up to a temperature of about 900C. <br>
+	    4. Record the thermocouple readings fitted to hemisphere surface. <br>
+	    5. Record the temperature of the test disc and insert it in the bakellite plate. <br>
+	    g. Record the temperature of the test disc at the interval of each 10 minutes. <br>
+            <p><strong>CALCULATIONS:</strong></p>
+	     Average surface temperature of the hemisphere T = (T1 + T2 + T3 + T4) / 4. <br>
+             The initial temperature of the test disc (Td)= T5 =.....in  (c) <br>
+             Temperature time response of the disc.
+	     <p><strong>GRAPH:</strong></p>
+		Plot a graph of temperature rise of disc with time as base and find out it’s slope at Origin i.e. <br>
+                [dT/dt] at t = 0 0C /sec. <br>
+            <p><strong>RESULT:</strong><br>
+            The value of Stefan Boltzmann constant, σ = ………. W/(m^2.K^4)</p>
             
 </p></div></div>
 </body>
