--- a/Virtual Lab/Conduction in a metal rod/Calculator.html
+++ b/Virtual Lab/Conduction in a metal rod/Calculator.html
@@ -11,6 +11,9 @@
     
     <style>
         /* Add a sky blue background color to the body background */
+        table,tr,td,th{
+    border: 2px solid black;
+}
 body{
 	margin: 0;
 	padding: 0;
@@ -178,8 +181,9 @@ ul li a:hover .name span{
             </li>
         </ul>
         </div>
-	<div class="cal">
-            <h2>Observation table:</h2>
+	<center>
+        <div class="cal" style="margin-top:10%;">
+            <h2 style="">Observation table:</h2>
 <table>
     <tr>
         <th colspan="3">Heat Input</th>
@@ -222,11 +226,13 @@ ul li a:hover .name span{
 	<td><input type="number" id="Vol" style="width:65px"></td>
     </tr>
 </table>
-<button onclick="calculate()">Calculate</button>
+<button onclick="calculate()" style="margin-top:10px;">Calculate</button>
 <p id="result"></p>
 </div>
+    </center>
 <script>
     function calculate(){
+       
         var V=document.getElementById('V').value;
         var I=document.getElementById('I').value;
         if(!isNaN(V) && !isNaN(I)){
@@ -293,6 +299,7 @@ ul li a:hover .name span{
     position:relative;
     left:1px;
 }
+
     </style>
 </body>
 </html>
