--- a/Virtual Lab/Conduction in a metal rod/Calculator.html
+++ b/Virtual Lab/Conduction in a metal rod/Calculator.html
@@ -271,6 +271,10 @@ ul li a:hover .name span{
     }
 </script>
 <style>
+  table,td,th{
+    border: 1px solid black; 
+    border-collapse: collapse;
+  }
     .menu{
         position:relative;
         top: 30px;;
