--- a/Virtual Lab/Conduction in a metal rod/simulator.html
+++ b/Virtual Lab/Conduction in a metal rod/simulator.html
@@ -392,88 +392,88 @@ ul li a:hover .name span{
             }
             #on{
                 position:relative;
-                top:285px;
-                left:-90px;
-                width:30px;
-                height:40px;
+                top:40px;
+                left:-65px;
+                width:5px;
+                height:5px;
             }
             #rev{
                 position: relative;
-                top:300px;
-                left:20px;
+                top:-10px;
+                left:420px;
             }
             #forw{
                 position: relative;
-                top:300px;
-                left:60px;
+                top:-10px;
+                left:440px;
             }
             
             #dimmerstat{
                 position:relative;
-                top:2px;
-                left:105px;
-                width:90px;
-                height:50px;
+                top:-210px;
+                left:480px;
+                width:80px;
+                height:45px;
             }
         .sim{
-            background-image: url("https://i.ibb.co/DGgnVKg/convectionappartus.jpg");
+            background-image: url("https://i.ibb.co/pnvG2WH/Metal-rod.jpg");
             background-repeat: no-repeat;
             background-size: 100% 100%;
-            height:800px;
-            width:800px;
+            height:500px;
+            width:600px;
             position:absolute;/* set the position of the navigation bar*/
-	        top: 800px;
+	        top: 560px;
 	        left: 50%;
 	        transform: translate(-50%,-50%);
             border: 2px solid black;
         
         }
         #temp{
-            width:81px;
-            height:79px;
+            width:60px;
+            height:60px;
             position: relative;
-            top:468px;
-            left:282px;
+            top:50px;
+            left:100px;
         }
         #left{
             position:relative;
-            top:490px;
-            left:109px;
+            top:-20px;
+            left:-40px;
         }
         #right{
             position:relative;
-            top:490px;
-            left:135px;
+            top:-20px;
+            left:-29px;
         }
         .tempdisplay{
-          width:110px;
-          height:63px;
+          width:95px;
+          height:50px;
           background-image: url("https://i.ibb.co/yYBZmXG/tempindicator.jpg");
           background-repeat: no-repeat;
           background-size: 110px 63px;
           position:relative;
-          top:295px;
-          left:267px;
+          top:-28px;
+          left:170px;
         }
         .voltdisplay{
-            width:113px;
-            height:58px;
+            width:100px;
+            height:50px;
             background-image: url("https://i.ibb.co/dm4fgNd/voltmeter.jpg");
             background-repeat: no-repeat;
             background-size: 110px 55px;
             position:relative;
-            top:132px;
-            left:210px;
+            top:-90px;
+            left:270px;
         }
         .ammeterdisplay{
-            width:110px;
-            height:55px;
+            width:100px;
+            height:50px;
             background-image: url("https://i.ibb.co/fD3BzDZ/ammeter.jpg");
             background-repeat: no-repeat;
             background-size: 110px 55px;
             position:relative;
-            top:58px;
-            left:348px;
+            top:-155px;
+            left:375px;
         }
         #power{
             position:relative;
