--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <ul>
         <li><a href="./Lagged cylinder/procedure.html"><h2>Test on lagged pipe</h2></a></li>
         <li><a href="./Lagged sphere/procedure.html"><h2>Test on lagged sphere</h2></a></li>
-        <li><a href="./Composite wall\procedure.html"><h2>Test on composite wall</h2></a></li>
+        <li><a href="./Virtual Lab/Composite wall\procedure.html"><h2>Test on composite wall</h2></a></li>
         <li><a href="./Conduction in a metal rod\procedure.html"><h2>Test on metal rod equipment</h2></a></li>
         <li><a href="./Natural convection/procedure.html"><h2>Test on natural convection equipment</h2></a></li>
         <li><a href="./Pin fin\procedure.html"><h2>Test on pin fin appartus</h2></a></li>
